<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipe Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="splash">Splash</string>
    <string name="title">Main</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="listTitle">Recipes</string>
    <string name="title_activity_recipe_viewer">Recipe Viewer</string>
    <string name="recipeImage">Recipe Image</string>
    <string name="menu_insert">Add Item</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="description">Description</string>
    <string name="about_page">About</string>
    <string name="maps_page">Find a store near you.</string>
    <string name="ingridents_">Ingridients</string>
    <string name="store_name">Store Name</string>
    <string name="location_info">Location Information</string>
    <string name="action_add">Add Item</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_directions">Store Search</string>
    <string name="action_edit">Edit Item</string>
    <string name="action_delete">Delete Item</string>
    <string name="action_recipes">Recipes</string>
    <string name="action_list">My List</string>
    <string name="prompt">Grocery List</string>
    <string name="action_delte_itme">Delete</string>
    <string name="action_go_to_list">View List</string>
    <string name="action_edit_list">Rename List</string>
    <string name="action_edit_item_string">Edit Item</string>
    <string name="action_strike_string">Strike Item</string>
    <string name="action_add_item_to_list">Add Item</string>
    <string name="action_add_favorite">Add To Favorites</string>
    <string name="action_remove_favorite_string">Remove From Favorites</string>
    <string name="action_add_favorite_list_string">Add To Grocery List</string>
    <string name="items_prompt">Grocery Items</string>
    <string name="item_edittext">Item</string>
    <string name="qty_edittext">Qty</string>
    <string name="index_list">A</string>
    

</resources>
