<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   	<!-- Settings Button -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <!-- About Button -->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/about_page"/>
    <!-- Favorite Button -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/action_favorite"
        android:showAsAction="ifRoom"
        />
    <!-- Store Search Button -->
	<item 
	    android:id="@+id/action_directions"
	    android:icon="@drawable/ic_action_directions"
	    android:title="@string/action_directions"
	    android:showAsAction="ifRoom"
	    />
	<!-- Recipe Button -->
	<item 
	    android:id="@+id/action_recipes"
	    android:icon="@drawable/ic_action_recipe"
	    android:title="@string/action_recipes"
	    android:showAsAction="ifRoom"
	    />
	<item 
	    android:id="@+id/sample"
	    android:icon="@drawable/ic_action_recipe"
	    android:title="@string/action_recipes"
	    android:showAsAction="ifRoom"
	    />

	
</menu>
