<!-- @Author: Gus A. Maturana -->
<!-- File Name: input_prompt_dialog.xml -->
<!-- layout for input -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/layout_root"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:padding="10dp" >

    <TextView
    	android:id="@+id/Label"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/items_prompt"
    	android:textAppearance="?android:attr/textAppearanceLarge" />


    <LinearLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
    		android:id="@+id/Label2"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/item_edittext"
    	/>
        <EditText
        	android:id="@+id/input_item"
        	android:layout_width="185dp"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="text" >

        <requestFocus />
    </EditText>
    </LinearLayout>
        <LinearLayout
        android:id="@+id/layout_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
    		android:id="@+id/Label3"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/qty_edittext"
    	/>
        <EditText
        	android:id="@+id/input_qty"
        	android:layout_width="185dp"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="text" >

        <requestFocus />
    </EditText>
    </LinearLayout>

</LinearLayout>
    
    
    

